小车整体运行代码/src/E2E-Sample/ros2_robot_arm/ros2_ws/log/build_2025-09-01_22-40-14/dofbot_garbage_yolov5/stderr.log
package init file 'dofbot_garbage_yolov5/utils/__init__.py' not found (or not a regular file)
  File "/root/ascend-devkit/src/E2E-Sample/ros2_robot_arm/ros2_ws/install/dofbot_garbage_yolov5/lib/python3.10/site-packages/dofbot_garbage_yolov5/utils/garbage_identify.py", line 93
    def garbage_grap(self, msg, xy=None,degree):
                                        ^^^^^^
SyntaxError: non-default argument follows default argument

